deploy/k8s/overlays/prod/patch-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 500m
              memory: 768Mi
            limits:
              cpu: 1500m
              memory: 1536Mi
