deploy/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atc-capital
spec:
  rules:
    - host: app.atc-capital.com
